force-app/main/default/objects/RFOO_COMP__c/RFOO_COMP__c.object-meta.xml
<CustomObject>
    <label>RFO Competitor Relation</label>
    <nameField>
        <displayFormat>RFOCMP-{0}</displayFormat>
        <label>RFO COMP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFO Competitor Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>