force-app/main/default/objects/RFOO_COMP__c/fields/Comp_Winid__c.field-meta.xml
<CustomField>
    <fullName>Comp_Winid__c</fullName>
    <formula>Competitor_Accounts__r.WIN_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comp Winid</label>
    <type>Text</type>
</CustomField>