force-app/main/default/objects/RFOO_COMP__c/fields/Competitor_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Accounts</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>RFOOCOMPS1</relationshipName>
    <type>Lookup</type>
</CustomField>