force-app/main/default/objects/RFOO_COMP__c/fields/Competitor_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Gallons__c</fullName>
    <label>Competitor Gallons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>