force-app/main/default/objects/RFOO_COMP__c/fields/RFOO_Account__c.field-meta.xml
<CustomField>
    <fullName>RFOO_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFOO Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>RFO Outlet</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RFO Competitor Relations (RFOO Account)</relationshipLabel>
    <relationshipName>RFOOCOMPS</relationshipName>
    <type>Lookup</type>
</CustomField>