force-app/main/default/objects/RFOO_COMP__c/fields/RFOO_Winid__c.field-meta.xml
<CustomField>
    <fullName>RFOO_Winid__c</fullName>
    <formula>RFOO_Account__r.WIN_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFOO Winid</label>
    <type>Text</type>
</CustomField>