force-app/main/default/objects/RFOO_COMP__c/fields/RFOO_Zip__c.field-meta.xml
<CustomField>
    <fullName>RFOO_Zip__c</fullName>
    <formula>RFOO_Account__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFOO Zip</label>
    <type>Text</type>
</CustomField>